# font-atlas-generator

./: .gitignore  CMakeLists.txt  README.md  compile  glyphs-data-format.txt
font-atlas-generator/: CMakeLists.txt
font-atlas-generator/src/: FontAtlasGenerator.cpp  FontAtlasGenerator.hpp  FontAtlasWrite.cpp  FontAtlasWrite.hpp  Main.cpp
fontatlas/: fontatlas.cpp
include/fontatlas/: fontatlas.hpp
